--- a/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/index.html
+++ b/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/index.html
@@ -20,7 +20,7 @@
                 <h2>Team Members</h2>
                 <div class="flex-container">
                     <section>
-                        <img src="" alt="">
+                        <img src="img/sarah-profile.svg" alt="sarah-profile">
                         <div>
                             <h3>Sarah</h3>
                             <p>Sarah is a senior front-end developer who specializes in clean, responsive UI design.
@@ -30,7 +30,7 @@
                         </div>
                     </section>
                     <section>
-                        <img src="" alt="">
+                        <img src="img/luis-profile.svg" alt="luis-profile">
                         <div>
                             <h3>Luis</h3>
                             <p>Luis is a product manager focused on creating user-centered digital experiences. He helps
@@ -38,14 +38,14 @@
                         </div>
                     </section>
                     <section>
-                        <img src="" alt="">
+                        <img src="img/jonah-profile.svg" alt="jonah-profile">
                         <div>
                             <h3>Jonah</h3>
                             <p>Jonah builds machine learning models that turn data into insights.</p>
                         </div>
                     </section>
                     <section>
-                        <img src="" alt="">
+                        <img src="img/amira-profile.svg" alt="amira-profile">
                         <div>
                             <h3>Amira</h3>
                             <p>Amira brings a decade of experience in cloud infrastructure. As a DevOps engineer, she
