added reset sheet and start over

--- a/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/index.html
+++ b/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/index.html
@@ -21,7 +21,7 @@
             <section class="team">
                 <h2>Team Members</h2>
                 <div class="flex-container">
-                    <section class="members">
+                    <section>
                         <img src="img/sarah-profile.svg" alt="sarah-profile">
                         <div>
                             <h3>Sarah</h3>
@@ -31,7 +31,7 @@
                                 exploring the latest in accessibility and design systems.</p>
                         </div>
                     </section>
-                    <section class="members">
+                    <section>
                         <img src="img/luis-profile.svg" alt="luis-profile">
                         <div>
                             <h3>Luis</h3>
@@ -39,14 +39,14 @@
                                 teams align strategy with execution.</p>
                         </div>
                     </section>
-                    <section class="members">
+                    <section>
                         <img src="img/jonah-profile.svg" alt="jonah-profile">
                         <div>
                             <h3>Jonah</h3>
                             <p>Jonah builds machine learning models that turn data into insights.</p>
                         </div>
                     </section>
-                    <section class="members">
+                    <section>
                         <img src="img/amira-profile.svg" alt="amira-profile">
                         <div>
                             <h3>Amira</h3>
