--- a/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/index.html
+++ b/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/index.html
@@ -21,7 +21,7 @@
             <section class="team">
                 <h2>Team Members</h2>
                 <div class="flex-container">
-                    <section>
+                    <section class="members">
                         <img src="img/sarah-profile.svg" alt="sarah-profile">
                         <div>
                             <h3>Sarah</h3>
@@ -31,22 +31,22 @@
                                 exploring the latest in accessibility and design systems.</p>
                         </div>
                     </section>
-                    <section>
-                        <img src="img/luis-profile.svg" alt="luis-profile">
+                    <section class="members">
+                        <img src="img/luis-profile.svg" alt="luis-profile" width="200" height="200">
                         <div>
                             <h3>Luis</h3>
                             <p>Luis is a product manager focused on creating user-centered digital experiences. He helps
                                 teams align strategy with execution.</p>
                         </div>
                     </section>
-                    <section>
-                        <img src="img/jonah-profile.svg" alt="jonah-profile">
+                    <section class="members">
+                        <img src="img/jonah-profile.svg" alt="jonah-profile" width="200" height="200">
                         <div>
                             <h3>Jonah</h3>
                             <p>Jonah builds machine learning models that turn data into insights.</p>
                         </div>
                     </section>
-                    <section>
+                    <section class="members">
                         <img src="img/amira-profile.svg" alt="amira-profile">
                         <div>
                             <h3>Amira</h3>
